Add example with concurrent data structures